# interp

./: README.md  pyproject.toml
interp/: __init__.py
interp/circuits/: attribution.py  graph.py  replacement_model.py
interp/deploy/: dashboard.py  neuronpedia.py
interp/eval/: metrics.py
interp/models/: __init__.py  split_llama.py
interp/scripts/: trace_circuits.py  train_saes.py  train_transcoders.py
interp/training/: config.py  data.py  sae.py  transcoder.py
interp/wrapper/: activation_store.py  hooked_model.py
